src/test/ui/consts/const-eval/ub-uninhabit.stderr
error[E0080]: this constant likely exhibits undefined behavior
  --> $DIR/ub-uninhabit.rs:19:1
   |
LL | const BAD_BAD_BAD: Bar = unsafe { Foo { a: 1 }.b};
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a value of an uninhabited type
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
